# bevy_utility_ai

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yaml
examples/hunting/: ai.rs  bundles.rs  camera.rs  components.rs  layers.rs  main.rs  systems.rs  ui.rs
examples/hunting/game/ai/: actions.rs  hunter.rs  inputs.rs  prey.rs
examples/hunting/game/entities/: carrion.rs  grass.rs  hunter.rs  mod.rs  prey.rs  water_source.rs
examples/hunting/game/systems/: food.rs  hunt.rs  prey.rs  rest.rs  water.rs
examples/hunting/logic/: ai.rs  components.rs  food.rs  hunt.rs  mod.rs  prey.rs  rest.rs  water.rs
examples/hunting/logic/ai/: hunter.rs  inputs.rs  mod.rs  prey.rs
examples/hunting/utils/: animations.rs
examples/wolf/: layers.rs  level.rs  main.rs  ui.rs
examples/wolf/assets/: game.ldtk
examples/wolf/game/: mod.rs
examples/wolf/game/ai/: actions.rs  inputs.rs  mod.rs  wolf.rs
examples/wolf/game/entities/: birds.rs  carrion.rs  mod.rs  shelter.rs  water_source.rs  wolf.rs
examples/wolf/game/systems/: drink.rs  food.rs  hunt.rs  mod.rs  pathfinding.rs  rest.rs  water.rs
examples/wolf/utils/: animations.rs  mod.rs  pathfinding.rs
macros/: Cargo.toml
macros/src/: common.rs  input_system.rs  lib.rs  targeted_input_system.rs
src/: ai_meta.rs  considerations.rs  dashboard.rs  decisions.rs  define_ai.rs  events.rs  lib.rs  plugin.rs  response_curves.rs  systems.rs
src/dashboard/: data.rs  plugin.rs  view.rs  view_models.rs  widgets.rs
src/dashboard/widgets/: base.rs  entity_filter.rs  plot_consideration_scores.rs  plot_decision_scores.rs  plot_input_scores.rs  root_entity_selection_panel.rs  root_header_panel.rs  root_observer_panel.rs  select_ai_definition.rs  select_view_mode.rs  view_decision.rs
src/systems/: make_decisions.rs  update_action.rs
tests/: dashboard.rs  e2e.rs  macro_input_system.rs  macro_targeted_input_system.rs
tests/common/: app.rs
tests/ui/: targeted_input_system_1.stderr
