[package]
name = "bevy_utility_ai"
version = "0.0.0"
edition = "2021"
description = "A Utility AI library for the Bevy game engine"

[workspace]
members = ["macros"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[dependencies]
bevy_utility_ai_macros = { path = "macros" }
bevy = { version = "0.13", default-features = false }
bevy_egui = { version = "^0.25", optional = true }
egui_plot = { version = "^0.26", optional = true }
rand = { version = "^0.8", features = [] }

[features]
dashboard = ["dep:bevy_egui", "dep:egui_plot"]

[dev-dependencies]
trybuild = "1"
# this ensures we have the dashboard features in tests
bevy_utility_ai = { path = ".", features = ["dashboard"] }
bevy = { version = "*" }
# used for the wolf example
bevy_ecs_ldtk = { git = "https://github.com/theshortcut/bevy_ecs_ldtk.git", branch = "bevy-0.13" }
pathfinding = "^4"

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/rparrett/bevy_ecs_tilemap/", branch = "bevy13" }

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
